changes in alignment of elements

--- a/src/pages/card.css
+++ b/src/pages/card.css
@@ -2,6 +2,12 @@
     font-family: sans-serif;
     text-align: center;
   }
+
+input {
+  width: 100%;
+  border: solid 1px;
+  border-color: black;
+}
     
   .col-md-4 {
     margin-bottom: 30px;
@@ -39,11 +45,5 @@
   
   .btn {
     border-radius: 25px;
-  }
-  
-  @media (min-width: 1200px) {
-    .container {
-      max-width: 1040px;
-    }
   }
   
